[package]
name = "rust-test-esp"
version = "0.1.0"
authors = ["Yuske Goto <yuskegoto@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]

# default = ["std", "hal", "esp-idf-sys/native"]

pio = ["esp-idf-sys/pio"]
# all = ["std", "nightly", "experimental", "embassy"]
# hal = ["esp-idf-hal", "embedded-svc", "esp-idf-svc"]
# std = ["alloc", "esp-idf-sys/std", "esp-idf-sys/binstart", "embedded-svc?/std", "esp-idf-hal?/std", "esp-idf-svc?/std"]
# alloc = ["embedded-svc?/alloc", "esp-idf-hal?/alloc", "esp-idf-svc?/alloc"]
# nightly = ["embedded-svc?/nightly", "esp-idf-svc?/nightly"] # Future: "esp-idf-hal?/nightly"
# experimental = ["embedded-svc?/experimental", "esp-idf-svc?/experimental"]
# embassy = ["esp-idf-hal?/embassy-sync", "esp-idf-hal?/critical-section", "esp-idf-hal?/edge-executor", "esp-idf-svc?/embassy-time-driver", "esp-idf-svc?/embassy-time-isr-queue"]

[dependencies]
anyhow = "1"
log = { version = "0.4.17", default-features = false }
# esp-idf-sys = { version = "0.33", optional = true, default-features = true }
# esp-idf-svc = { version = "0.46", optional = true, default-features = true }
# esp-idf-hal = { version = "0.41", optional = true, default-features = true }
# embedded-svc = { version = "0.25", optional = true, default-features = true }
# embedded-hal = "0.2"

esp-idf-sys = { version = "0.33", features = ["binstart"] }
esp-idf-svc = "0.46"
esp-idf-hal = "0.41"
embedded-svc = "0.25"
embedded-hal = "0.2"

# esp-idf-sys = { version = "0.32", features = ["binstart"] }
# esp-idf-svc = "0.45"
# esp-idf-hal = "0.40"
# embedded-svc = "0.24"
# embedded-hal = "0.2"

smart-leds = "*"
ws2812-esp32-rmt-driver = "*"
thingbuf = { version = "0.1", features = ["static"] }
rosc = "0.9"
heapless = "0.7"

[build-dependencies]
embuild = "0.31.2"
